compiler/testData/diagnostics/tests/inline/nonLocalBreakContinue/lambdaWithReceiver.diag.txt
/lambdaWithReceiver.kt:14:29: error: the feature "break continue in inline lambdas" is not supported in language versions 1.*, please use version 2.0 or later
        if (name == "Kate") break
                            ^^^^^
/lambdaWithReceiver.kt:15:30: error: the feature "break continue in inline lambdas" is not supported in language versions 1.*, please use version 2.0 or later
        if (name == "Masha") continue
                             ^^^^^^^^

